# Open3D

./: .#CMakeLists.txt  .appveyor.yml  .clang-format  .codacy.yml  .dockerignore  .gitattributes  .gitfilters  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  Doxyfile  FindOpen3D.cmake  LICENSE  README.md  README_OneAPI.md  ReleaseNote.md  SECURITY.md  Untitled.ipynb  a.out  alloc_file.sh  async-eventloop.py  async_loop.py  auto_builder.sh  bad.txt  build.sh  clean.sh  compile_bench.sh  cuda_compile.sh  cuda_libs_a.sh  cuda_libs_so.sh  demo.ipynb  dotmap.py  dpct_run.sh  draw.py  (+37 more)
benchmark/: CMakeLists.txt  PointCloud.cpp
cmake/ispc_isas/: CMakeLists.txt  ISADispatcher.c  ISADispatcher.ispc
cpp/: CMakeLists.txt
cpp/apps/: CMakeLists.txt  fixup_macosx_bundle.sh  make_win32_installer.cmake  sign_open3d_app.sh
cpp/benchmark/: CMakeLists.txt
cpp/benchmarks/: Benchmark.h  Benchmarks.cpp  CMakeLists.txt  Main.cpp
cpp/open3d/: CMakeLists.txt  Macro.h  Open3D.h  Open3D.h.in  Open3DConfig.cmake.in  Open3DConfig.cpp  Open3DConfig.h  Open3DConfig.h.in  SYCLUtils.cpp  SYCLUtils.h  Timer.cpp  Timer.h  cmake_uninstall.cmake.in  libOpen3D.gnu.map  libOpen3D.macOS.map  version.txt
cpp/pybind/: CMakeLists.txt  _build_config.py.in  check_and_install_conda_deps.cmake  docstring.cpp  docstring.h  generate_paddle_ops_wrapper.py  generate_tf_ops_wrapper.py  generate_torch_ops_wrapper.py  make_install_pip_package.cmake  make_python_package.cmake  open3d_pybind.cpp  open3d_pybind.h  pybind_filesystem.h  pybind_utils.cpp  pybind_utils.h
cpp/tests/: CMakeLists.txt  Main.cpp  Tests.cpp  Tests.h  UnitTest.cpp  UnitTest.h
cpp/tools/: CMakeLists.txt  ConvertPointCloud.cpp  EmbedResources.cpp  GLInfo.cpp  ManuallyCropGeometry.cpp  MergeMesh.cpp  TestEmbedResources.cpp  TestEmbedResources.sh  ViewGeometry.cpp
cpp/unit_test/: CMakeLists.txt  Main.cpp  UnitTest.h
cpp/util/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  arm.rst  builddocs.rst  compilation.rst  conf.in.py  conf.py  conf.py.in  contribute.rst  cpp.rst  cpp_project.rst  cuda_vs_sycl_nns_hashmap.md  cutlass_gemm_cuda_analysis.md  docker.in.rst  documented_modules.txt  getting_started.in.rst  getting_started.rst  getting_started.rst.in  gpu_hash_map_design_notes.md  index.rst  introduction.rst  make.bat  make.py  make_docs.py  nns_hashmap_cpu_cuda_sycl.md  open3d_ml.rst  poux_book.rst  release.md  requirements.txt  sycl.rst  sycl_fr_hybrid_cpu_reference.json  sycl_fr_hybrid_grid_after.json  sycl_fr_hybrid_grid_results.md  sycl_pytorch_ops_plan.md  template_python_docstring.txt  tutorial.rst  versions.js
docs/_static/: google_analytics_header.html  theme_overrides.css
docs/_templates/: versions.html
docs/contribute/: contribute.rst  contribution_recipes.rst  example_python_docstring.rst  styleguide.rst
docs/dev/: ml_ops_dual_arch_plan.md
docs/jupyter/: jupyter_run_all.py  jupyter_strip_output.py  open3d_tutorial.py
docs/python_api/: camera.rst  color_map.rst  geometry.rst  index.rst  integration.rst  io.rst  odometry.rst  registration.rst  utility.rst  visualization.rst
docs/python_api_in/: open3d.io.rpc.rst  open3d.ml.paddle.layers.rst  open3d.ml.paddle.ops.rst  open3d.ml.tf.layers.ContinuousConv.rst  open3d.ml.tf.layers.FixedRadiusSearch.rst  open3d.ml.tf.layers.KNNSearch.rst  open3d.ml.tf.layers.RadiusSearch.rst  open3d.ml.tf.layers.SparseConv.rst  open3d.ml.tf.layers.SparseConvTranspose.rst  open3d.ml.tf.layers.VoxelPooling.rst  open3d.ml.tf.layers.rst  open3d.ml.tf.ops.rst  open3d.ml.torch.layers.ContinuousConv.rst  open3d.ml.torch.layers.FixedRadiusSearch.rst  open3d.ml.torch.layers.KNNSearch.rst  open3d.ml.torch.layers.RadiusSearch.rst  open3d.ml.torch.layers.SparseConv.rst  open3d.ml.torch.layers.SparseConvTranspose.rst  open3d.ml.torch.layers.VoxelPooling.rst  open3d.ml.torch.layers.rst  open3d.ml.torch.nn.ContinuousConv.rst  open3d.ml.torch.nn.FixedRadiusSearch.rst  open3d.ml.torch.nn.KNNSearch.rst  open3d.ml.torch.nn.RadiusSearch.rst  open3d.ml.torch.nn.SparseConv.rst  open3d.ml.torch.nn.SparseConvTranspose.rst  open3d.ml.torch.nn.VoxelPooling.rst  open3d.ml.torch.nn.functional.rst  open3d.ml.torch.nn.rst  open3d.ml.torch.ops.rst  open3d.visualization.rst  open3d.visualization.tensorboard_plugin.summary.rst
docs/test_data/: download_test_data.py  rs_default_config.json  sphere.ply  sync.ply  test_sample_custom.ply  test_sample_wrong_format.ply
docs/tutorial/: index.rst  point_cloud.rst  reference.rst
examples/Cpp/: AzureKinectLoop.cpp  AzureKinectMKVReader.cpp  AzureKinectRecord.cpp  AzureKinectViewer.cpp  CMakeLists.txt  CameraPoseTrajectory.cpp  CmdParser.h  ColorMapOptimization.cpp  DepthCapture.cpp  EvaluateFeatureMatch.cpp  EvaluatePCDMatch.cpp  FilamentDemo.cpp  FileDialog.cpp  FileSystem.cpp  Flann.cpp  GuiDemo.cpp  ISSKeypoint.cpp  ISSKeypoints.cpp  Image.cpp  IntegrateRGBD.cpp  LineSet.cpp  Log.cpp  MKVIO.cpp  OdometryRGBD.cpp  OpenMP.cpp  PCDFileFormat.cpp  PointCloud.cpp  PoseGraph.cpp  ProgramOptions.cpp  RGBDOdometry.cpp  RealSense.cpp  RealSense2.cpp  RegistrationRANSAC.cpp  TriangleMesh.cpp  TrimMeshBasedOnPointCloud.cpp  ViewDistances.cpp  ViewPCDMatch.cpp  Visualizer.cpp  Voxelization.cpp
examples/Linking/: CMakeLists.txt  ExampleLinking.cpp  README.md
examples/cpp/: AdvancedIndexing.cpp  AllWidgets.cpp  AzureKinectMKVReader.cpp  AzureKinectRecord.cpp  AzureKinectViewer.cpp  BenchmarkFixedRadiusSearch.cpp  BenchmarkHybridSearch.cpp  BenchmarkNNS.cpp  CMakeLists.txt  CameraPoseTrajectory.cpp  ColorMapOptimization.cpp  CreateShapes.cpp  DatasetDownloader.cpp  DemoTICPMultiScale.cpp  DemoTICPOdom.cpp  DemoTMultiScaleICP.cpp  DemoTMultiScaleICP2.cpp  DemoTMultiScaleICPMapping.cpp  DemoTMultiScaleICPMapping2.cpp  DemoTMultiScaleICPwithLines.cpp  DenseSLAM.cpp  (+90 more)
src/: CMakeLists.txt  LICENSE.txt  Open3DConfig.cmake.in  Open3DConfig.cpp  Open3DConfig.h.in  Open3DTargets.cmake  _Open3DConfigVersion.cmake.in  cmake_uninstall.cmake  open3d.pc.in  open3d_config.h.in  version.txt
(+6828 files in other folders)
